  EntityPanel.createEditControlPanel() added
  FilteredComboBoxModel.addSelectionListener() now takes EventInfoListener as parameter
  SelectionModel.addSelectedIndexListener() now takes EventInfoListener as parameter
  SelectionModel.addSelectedItemsListener() added along with remove
  SelectionModel.addSelectedItemListener() added along with remove
  Some ivysettings.xml improvement
  Usages of Util.rejectNullValue() and Util.equal() replaced with Objects.requireNonNull() and Objects.equals() respectively
  Util.rejectNullValue() and equal() removed
  org.jminor.common.model.Util broken up into TextUtil, PreferencesUtil and FormatUtil, rest moved to common.Util
  StateObserver.addActivateListener() and addDeactivateListener() removed
  ServerUtil.resolveTrustStoreFromClasspath() refactored
  Util.getArray/CollectionContentsAsString() moved to TextUtil
0.10.4
  Source updated to Java 8
  TextUtil.padString() now uses Alignment enum instead of boolean switch
  TextUtil.getDelimitedString() bug fixed
  <code></code> replaced with {@code } in javadoc
  ServerMonitor, thread stats not cleared on reset
0.10.5
  EntityConnectionServer refactoring, access to admin interface moved to the server itself with user authentication
  DefaultEntityConnectionServer refactoring continued, Configuration.SERVER_ADMIN_PORT reintroduced
  Server monitor, added framework-db-remote module to dependencies due to the above
  SwingEntityTableModel, replaceEntitiesByKey() no longer calls filterContents()
  DefaultEntityConnectionServer bug fixed, now unexports admin interface
  EntityConnectionServer removed, functionality moved to org.jminor.common.server.Server
  HostMonitor, hardcoded admin user removed
  Server monitor, removed framework-db-remote module from dependencies due to the above
  org.jminor.common, inlined a few Objects.requireNonNull() calls
  Unnecessary logback core and or classic dependencies removed from some modules