@@ -24,6 +24,8 @@
     <dependency org="org.jminor" name="jminor-framework-db-core" rev="${version}"/>
 
     <dependency org="org.slf4j" name="slf4j-api" rev="1.7.7"/>
+    <dependency org="ch.qos.logback" name="logback-classic" rev="1.1.3"/>
+    <dependency org="ch.qos.logback" name="logback-core" rev="1.1.3" conf="runtime->master"/>
 
     <dependency org="junit" name="junit" rev="4.12" conf="test->master"/>
     <dependency org="org.hamcrest" name="hamcrest-core" rev="1.3" conf="test->master"/>
